# ai-systems

./: DEVELOPMENT.md  Dockerfile  Dockerfile.ollama  Dockerfile.opt  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: validation.yml
.streamlit/: config.toml
ch_db/: chroma.sqlite3
data/: print_db_contents.py
data/products/: echo_pod_mini.txt  fantastic_charge_pro.txt  game_port_neo_dock.txt  lock_next_vault_box.txt  luma_key_smart_bulb.txt  signal_pro_boost_stick.txt  view_port_halo.txt  volt_egde_max.txt
deployment/: Dockerfile  README.md  dashboard.json  metrics  vllm-load.py
deployment/monitoring/: docker-compose.yml
deployment/monitoring/prometheus/: prometheus.yml
notebooks/: README.md  tool_call.ipynb
src/chatbot/: app.py
src/config/: app_config.py
src/data/: faq_ingest.py  faq_st.py  qa_ingest.py  rag_ingest.py
src/guards/: __init__.py  guards.py  validate.py
src/observability/: __init__.py  utils.py
src/qa/: qa_st.py
src/rag/: README.md  __init__.py  config.py  ollama_rag.py  prompts.py  qa.py  rag.py  rag_test.py  system_prompts.py  utils.py
src/test/: README.md  bench.py  llamacpp_benchmark.py
tests/: bench.py  conftest.py  llamacpp_benchmark.py  test_ragas_evaluation.py
