[project]
name = "qa-bot"
version = "0.1.0"
description = "QA assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cached-path>=1.6.7",
    "chromadb>=0.5.23",
    "detoxify>=0.5.2",
    "guardrails-ai>=0.5.13",
    "numpy>=1.26.4",
    "ollama>=0.4.4",
    "opik>=1.6.13",
    "ragas>=0.2.14",
    "streamlit>=1.41.1",
    "statistics>=1.0.3.5",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "unidecode>=1.4.0",
    "langchain-core>=0.3.41",
    "langchain-chroma>=0.2.3",
    "langchain-ollama>=0.3.3",
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-community>=0.3.25",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.7.0",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "duckduckgo-search>=6.4.2",
    "ipykernel>=6.30.0",
    "load-dotenv>=0.1.0",
    "mypy>=1.17.0",
    "openai>=1.59.8",
    "pylint>=3.3.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.13",
    "tavily-python>=0.7.10",
]

[tool.ruff]
line-length = 88
lint.select = ["I"]
fix = true

[tool.ruff.lint.isort]
known-third-party = ["ollama", "langchain_ollama", "langchain_chroma", "opik", "loguru"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test",
]
